# DevOps

./: .gitignore  LICENSE
.github/workflows/: ansible.yml  ghcr.yml  php81-fpm-nginx.yml  toolchain-arch.yml  toolchain-ubuntu.yml
ansible/: .dockerignore  Dockerfile  README.md  docker-compose.yml  hosts.yml  mkunixpw.py  setup-arch-desktop.yml  setup-arch-kvm.yml  setup-arch-system.yml  setup-cloud-servers.yml
ansible/docs/system-setup/: arch-linux.md
ansible/host_vars/: arch.yml.dist
ansible/roles/desktop/: README.md
ansible/roles/desktop/files/arch/: install_yay
ansible/roles/desktop/tasks/: main.yml
ansible/roles/desktop/tasks/arch/: fonts.yml  gpu.yml  main.yml  xorg.yml  yay.yml
ansible/roles/kvm/: README.md
ansible/roles/kvm/tasks/: main.yml
ansible/roles/kvm/tasks/arch/: iommu.yml  libvirt.yml  main.yml  vfio.yml
ansible/roles/pci-passthrough/: README.md
ansible/roles/pci-passthrough/tasks/: main.yml  query.yml
ansible/roles/processor-detection/tasks/: main.yml
ansible/roles/system-setup/files/: iommu
ansible/roles/system-setup/tasks/: main.yml
ansible/roles/system-setup/tasks/arch/: add-grub-entry.yml  enable-service.yml  filesystem.yml  generate-grub-kernel-list.yml  grub.yml  host.yml  locales.yml  luks.yml  lvm.yml  main.yml  mkinitcpio.yml  pacman.yml  pacstrap-kernel.yml  pacstrap.yml  partitioning.yml  prerequisites.yml  services.yml  (+1 more)
ansible/roles/system-setup/templates/: 40.grub.j2
cpp/boilerplate/cmake/coverage/: CMakeLists.txt
cpp/toolchain/: Dockerfile.archlinux  Dockerfile.ubuntu
php/8.1/fpm-nginx/: Dockerfile
(+15 files in other folders)
